tests/coverage/misc/fail/negative/truncation/009_template_substitution_eof.js
// Expected error: unterminated template substitution.
const value = `hello ${name;
